js/src/tests/test262/built-ins/Error/prototype/S15.11.3.1_A2_T1.js
if
(
!
(
Error
.
hasOwnProperty
(
'
prototype
'
)
)
)
{
throw
new
Test262Error
(
'
#
0
:
Error
.
hasOwnProperty
(
\
'
prototype
\
'
)
return
true
.
Actual
:
'
+
Error
.
hasOwnProperty
(
'
prototype
'
)
)
;
}
if
(
Error
.
propertyIsEnumerable
(
'
prototype
'
)
)
{
throw
new
Test262Error
(
'
#
1
:
Error
.
propertyIsEnumerable
(
\
'
prototype
\
'
)
return
false
.
Actual
:
'
+
Error
.
propertyIsEnumerable
(
'
prototype
'
)
)
;
}
var
cout
=
0
;
for
(
var
p
in
Error
)
{
if
(
p
=
=
=
"
prototype
"
)
cout
+
+
;
}
if
(
cout
!
=
=
0
)
{
throw
new
Test262Error
(
'
#
2
:
cout
=
=
=
0
.
Actual
:
'
+
cout
)
;
}
reportCompare
(
0
0
)
;
